assets/layout.css
body {
	font-size: 150%;
	background: black;
	padding: 0;
	margin: 0;
}

h1, h2 {
	text-align: center;
	font-size: 1em;
	height: 0;
	margin: 0;
}

input, table, tr, td {
	font-size: 100%;
}

/**
	Controls
*/
#controls  {
	padding: 0;
	list-style: none;
	position: fixed;
	top: -1em;
	left: 0;
	bottom: -1em;
	right: 0;
	z-index: 25;
}

.menuEnabled #controls {
	top: 1em;
}

#controls > :first-child,
#controls > :first-child+li,
#controls > :first-child+li+li {
	line-height: 10em;
	text-align: center;
	vertical-align: middle;
	text-indent: -100em;
}

#controls > li > a {
	display: block;
	width: 100%;
	height: 100%;
	overflow: hidden;
	text-decoration: none;
	color: black;
}


/*First Columns*/

#controls > :first-child+li {
	left: 0;
	right: 67%;
	position: absolute;
}

/*Second Columns*/

#controls > :first-child,
#controls > :last-child,
#controls > :first-child+li+li+li {
	left: 33%;
	right: 33%;
	position: absolute;
}

/*Third Columns*/

#controls > :first-child+li+li {
	left: 67%;
	right: 0;
	position: absolute;
}

/*Top half*/

/*Top Sixth*/

#none {
	top: 0;
	bottom: 83%;/*17*/
	line-height: 100%;
	text-align: center;
}

/*Top Third*/

#none {
	top: 17%;
	bottom: 50%;
}

/*Bottom Third*/
/*na*/

/*Bottom Sixth*/
#none {
	top: 83%;
	bottom: 0;
}

/*Full height*/

#controls > :first-child,
#controls > :first-child+li,
#controls > :first-child+li+li {
	top: 0;
	bottom: 0;
}

#controls > :first-child+li+li+li > a {
	margin: 1em 0 0;
}

#controls > :last-child {
	position: fixed;
	bottom: 1em;
	line-height: 1em;
	text-align: center;
}

#controls > li > select {
	font-size: 1.25em;
}

/*Content Replacement*/

#controls > :first-child:hover a::before,
#controls > :first-child+li:hover a::before,
#controls > :first-child+li+li:hover a::before {
	display: block;
	text-indent: 0;
	position: absolute;
	content: ">>";
	line-height: 1em;
	top: 50%;
	left: 0;
	right: 0;
	padding: 0 1.5em;
	margin-top: -0.5em;
	font-weight: bolder;
	z-index: 80;
}

#controls > :first-child+li:hover a::before {
	content: "<";
	text-align: left;
}

#controls > :first-child+li+li:hover a::before {
	content: ">";
	text-align: right;
}

/** /Controls **/


/**
    Options
*/

#options, #auth {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: rgba(0,0,255,0.25);
	z-index: 50;
}

#options:target, #auth:target {
	display: block;
}

#options label, #auth label {
	float: left;
	clear: left;
	width: 40%;
	margin: 0 1em 0 0;
}

#auth label {
	position: relative;
	left: -1em;
	width: 50%;
	text-align: right;
}

label + * {
	float: left;
}

[type="checkbox"] {
	height: 1em;
}

fieldset p {
	color: #666;
	font-size: 0.75em;
}

fieldset {
	margin: 1em 0 2em;
}

.dialog {
	position: absolute;
	top: 5%;
	right: 5%;
	bottom: 10%;
	left: 5%;
	background: rgba(255,255,255,0.75);
	border: 0.2em solid black;
	border-radius: 0.5em;
	padding: 1em;
	margin: 1em auto;
	overflow: auto;
}

h2 {
	margin: 0 0 2em;
}

.control {
	font-size: 0.75em;
	position: fixed;
	bottom: 5%;
	right: 0;
	text-align: center;
	margin-right: 5%;
	background: rgba(255,255,255,0.75);
	border: 0.2em solid blue;
	border-radius: 0.5em;
	padding: 0.25em;
	width: 15ex;
}

.control + .control {
	right: 18ex;
}

#debugOptionsForm {
	font-size: 0.85em;
}

/** /Options **/

/**
	Menu
*/

#menu {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	background: rgba(128, 128, 128, 0.5);
	height: 2em;
	text-align: center;
	z-index: 1;
}

/** /Menu **/

/**
	Reader
*/

figure {
	margin: 0;
	padding: 0;
	position: relative;
	z-index: 10;
	background: black;
	box-shadow: 0 -0.25em 0.5em 0 rgba(0, 0, 0, 0.75),0 -0.05em 0.1em 0 rgba(128, 128, 255, 0.75);
	-webkit-transition: margin 500ms ease-in-out;
	-moz-transition: margin 500ms ease-in-out;
	-o-transition: margin 500ms ease-in-out;
	-ms-transition: margin 500ms ease-in-out;
	transition: margin 500ms ease-in-out;
}

.menuEnabled figure {
	margin-top: 2em;
}

#ComicReader {
	background: #333;
	background: transparent -webkit-radial-gradient(50% 50%, ellipse cover, rgba(255,255,255,0.85), rgba(255,255,255,0.85) 15%, rgba(128,128,128,0.05) 90%);
	border-radius: 0.25em;
	line-height: 10em;
	min-height: 18em;
	text-align: center;
	vertical-align: middle;
	position: relative;
	margin: 1em;
	-webkit-transition: all 500ms ease-out;
	padding: 0.75em 0;
	opacity: 1;
}

#ComicReader > .entry {
	-webkit-transition: opacity 500ms ease-out;
	position: absolute;
	top: 2%;
	opacity: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
	margin-top: 0.35em;
}

#ComicReader > .entry > a {
	display: block;
}

#ComicReader > .active {
	-webkit-transition: opacity 500ms ease-in;
	position: relative;
	opacity: 1;
	margin-top: 0;
	height: auto;
	overflow: visible;
}

#ComicReader img {
	text-align: center;
	vertical-align: middle;
}

#ComicReader .imgPortrait:last-child img,
#ComicReader .imgLandscape:last-child img {
}

.inprogress #ComicReader::before {
	content: "Loading...";
	display: block;
	position: absolute;
	top: -0.1em;
	left: -0.1em;
	min-width: 100%;
	min-height: 100%;
	text-shadow: 0 0 0.75em #FF8;
	border: 0.1em solid rgba(0,0,0,0.9);
	z-index: 100;
}


/*React on visible options*/

.ls-p-limit-height.orientation_landscape #ComicReader.imgPortrait img,
.p-p-limit-height.orientation_portrait #ComicReader.imgPortrait img {
	max-height: 85%;
}

.ls-ls-limit-width.orientation_landscape #ComicReader.imgLandscape img,
.p-ls-limit-width.orientation_portrait #ComicReader.imgLandscape img {
	max-width: 95%;
}

.ls-ls-force-height.orientation_landscape #ComicReader.imgLandscape img {
	height: 85%;
}

.p-p-force-height.orientation_portrait #ComicReader.imgPortrait img {
	min-height: 85%;
}

.p-p-force-width.orientation_portrait #ComicReader.imgPortrait img,
.ls-p-force-width.orientation_landscape #ComicReader.imgPortrait img {
	width: 95%;
}

.ls-ls-force-width.orientation_landscape #ComicReader.imgLandscape img {
	min-width: 95%;
}

.advancedOption .advanced, .advancedOption label.advanced + input {
	display: inherit;
}

.advanced, label.advanced + input {
	display: none;
}

/** /Reader **/



/**
	Glow And Glow Animation!!
*/

h1,
.inprogress #ComicReader::before {
	text-shadow: 0 0 0.75em #FF8;
}

.inprogress h1 {
	-webkit-animation: loadingText 3s linear 0 infinite alternate;
}
/**
@-webkit-keyframes loadingText {
	0% {
		text-shadow: 0 0 1.5em #FF8;
	}
	100% {
		text-shadow: 0 0 0.2em #FF8;
	}
}
**/
#ComicReader {
	box-shadow: 0em 0em 2em rgba(220,220,128,0.5);
}

.inprogress #ComicReader {
	-webkit-animation: loadingBlock 3s linear 0 infinite alternate;
}
/**
@-webkit-keyframes loadingBlock {
	0% {
		box-shadow: 0em 0em 2em rgba(220,220,128,0.5);
	}
	100% {
		box-shadow: 0em 0em 0.25em rgba(220,220,128,0.5);
	}
}
**/
#controls a::before,
#controls > :first-child+li+li+li > a:hover {
	color: rgba(32,32,32,0.75);
	text-shadow: #8F8 0 0.1em 0.35em;
}
/** /Glow And Glow Animation **/



/**
	Gradients
*/
#ComicReader::before {
	color: rgba(0,0,0,1);
	/*background: transparent -webkit-radial-gradient(50% 50%, ellipse cover, rgba(0,0,0,0.5), rgba(0,0,0,0.5) 15%, rgba(0,0,0,0.95) 90%);*/
	background: rgba(0,0,0,0.5) -webkit-gradient(radial, 50% 50%, 30, 50% 50%, 800, from(rgba(0,0,0,0)), to(rgba(0,0,0,0.75)), color-stop(90%, rgba(0,0,0,0.75)));
}


/**
 * 	CSS Parsing issues in Chrome!!!
 *  For some reason, putting the below code higher up in the CSS made things go bump...
 */


#menu a[href="#options"] {
	font-size: 0.35em;
    text-indent: -100em;
    width: 1.25em;
    height: 1.25em;
    border-radius: 50%;
    border: 0.75em solid white;
    margin: 1em;
    position: absolute;
    right: 1em;
    top: 0em;
    -webkit-transform:rotate(22.5deg);
	display: block;
}

a[href="#options"]:before,
a[href="#options"]:after {
    content: ".";
    display: block;
    position: absolute;
    right: -0.8em;
    top: -0.8em;
    width: 1.4em;
    height: 1.4em;
    border: 1em solid white;
    border-radius: 0.5em;
    border-width: 0.7em;
}
a[href="#options"]:after {
    -webkit-transform:rotate(45deg);
}

